--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 decorator==5.1.1
 Django==5.0.1
+django-cors-headers==4.3.1
 django-extensions==3.2.3
 djangorestframework==3.14.0
 executing==2.0.1
