tests completed y fix requirements

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SECRET_KEY=
-NAME=
-USER=
-PASSWORD=
-HOST=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_PASSWORD=
 HUGGING_FACE_TOKEN=
